<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".TelaLogin">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="410dp"
        android:layout_height="190dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_loop_game_novo" />

    <View
        android:id="@+id/viewTelaHomeBranco"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/container_components"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtUsuarioTelaHome"
        android:layout_width="96dp"
        android:layout_height="29dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/viewTelaHomeBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <ScrollView
        android:id="@+id/scvRankingTelaHome"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginHorizontal="20dp"
        android:background="#C0DDFA"

        android:backgroundTint="#FFFEFE"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTelaHomeBranco"
        app:layout_constraintVertical_bias="0.347">

        <LinearLayout
            android:id="@id/scvRankingTelaHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPrimeiroJogadorTelaHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/primeiro"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtSegundoJogadorTelaHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/segundo"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtTerceiroJogadorTelaHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/terceiro"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtQuartoJogadorTelaHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/quarto"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtQuintoJogadorTelaHome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:hint="@string/quinto"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnJogarTelaHome"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_jogar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scvRankingTelaHome"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toTopOf="@+id/viewTelaHomeBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone_avatar_profile" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="66dp"
        android:layout_height="37dp"
        android:contentDescription="@string/crown"
        app:layout_constraintBottom_toTopOf="@+id/viewTelaHomeBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/crown_black" />

    <TextView
        android:id="@+id/txtPontuacaoTelaHome"
        android:layout_width="72dp"
        android:layout_height="31dp"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/viewTelaHomeBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/ranking"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/scvRankingTelaHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTelaHomeBranco"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btnSairTelaHome"
        android:layout_width="68dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/orange"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDicasTelaHome"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/dica_inicial"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewTelaHomeBranco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>