<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".TelaLogin">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="53dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        app:srcCompat="@drawable/icone_login_avatar" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/icone_cadeado" />

    <EditText
        android:id="@+id/edtNomeUsuarioTelaLogin"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="Usuario"
        android:textColor="#C4000000"
        android:textColorHint="@color/dark_gray"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edtSenhaTelaLogin"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="#C4000000"
        android:textColorHint="@color/dark_gray"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeUsuarioTelaLogin"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/cbxLembrarSenhaTelaLogin"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:text="@string/lembrar_senha"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaTelaLogin"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLoginTelaLogin"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/botao_login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxLembrarSenhaTelaLogin"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnCadastrarSeTelaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="@color/orange"
        android:text="@string/cadastrar_se"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginTelaLogin"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btnEsqueceuSenhaTelaLogin"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:background="#006EB5FF"
        android:backgroundTint="@color/blue"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginTelaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbxLembrarSenhaTelaLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="410dp"
        android:layout_height="210dp"
        android:src="@drawable/logo_loop_game_novo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />


</androidx.constraintlayout.widget.ConstraintLayout>
